Fix: 일정 댓글 조회-탈퇴한 사용자 표시